# faster-paddle

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml
.github/workflows/: CI.yml
models/: det.onnx
models/tiny/: char_dict.json
src/: cv.rs  layout.rs  lib.rs  ocr.rs  preprocess.rs
tests/: test_integration.py
